# OtterLink

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
deploy/launchd/: com.otterlink.core.plist  com.otterlink.gateway.plist  com.remoteagent.core.plist  com.remoteagent.gateway.plist
deploy/systemd/: otterlink-core.service  otterlink-gateway.service  otterlink.env.example  otterlink.target  remoteagent-core.service  remoteagent-gateway.service  remoteagent.env.example  remoteagent.target
docs/: README.md  acp.md  api-examples.md  architecture.md  configuration.md  data-model.md  design.md  installation.md  interfaces.md  macos-installation.md  operations.md  project-plan-v2.md  task-list.md
docs/archive/: demo-implementation-notes.md  feishu-acp-session-architecture-plan.md  three-layer-architecture.md
gateway/: package-lock.json  package.json
gateway/src/: commands.js  config.js  core-client.js  index.js  service.js
gateway/test/: auth.test.js  feishu-live.test.js  render.test.js  service.test.js  session.test.js  ws-watchdog.test.js
scripts/: install-launchd.sh  install-one-click.sh  install-systemd.sh  launchd-core.sh  launchd-gateway.sh  otterlink-cli.js  reload-launchd.sh  reload-systemd.sh  remoteagent-cli.js  run-core.sh  run-gateway.sh  send-notify.sh  send-test-types.sh  start-longconn.sh  stop-longconn.sh  test-local-acp.sh
scripts/lib/: common-env.sh
src/: app.rs  config.rs  lib.rs  main.rs  protocol.rs
src/agent/: mod.rs  normalized.rs
src/api/: http.rs
src/core/: commands.rs  inbound.rs  message_builder.rs  (+7 more)
(+17 files in other folders)
