[package]
name = "feishu-acp-bridge-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
agent-client-protocol = "0.10.0"
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
